--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ node_js:
 install:
   - npm install -g codecov
 script:
-  - yarn install
-  - yarn lint
-  - yarn test:coverage --runInBand --no-cache
-  - yarn test --runInBand --no-cache
+  - npm install
+  - npm run lint
+  - npm run test:coverage --runInBand --no-cache
+  - npm run test --runInBand --no-cache
   - codecov
 cache:
   directories:
