--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install --frozen-lockfile
+    - run: npm ci
     - run: npm run lint
     - run: npm run test --runInBand --no-cache
       env:
